Pink Pansy is born.

--- a/index.less
+++ b/index.less
@@ -4,6 +4,7 @@
 @import "styles/syntax-variables.less";
 
 @import "styles/editor.less";
+@import "styles/hunkview.less";
 
 @import "styles/syntax/_base.less";
 @import "styles/syntax/c.less";
