--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,31 +1,31 @@
 
 // Config -----------------------------------
-@syntax-hue:          230;
+@syntax-hue:          307;
 @syntax-saturation:    1%;
 @syntax-brightness:   98%;
 
 
 // Monochrome -----------------------------------
-@mono-1: hsl(@syntax-hue, 8%, 24%);
+@mono-1: hsl(@syntax-hue, 77%, 40%);
 @mono-2: hsl(@syntax-hue, 6%, 44%);
-@mono-3: hsl(@syntax-hue, 4%, 64%);
+@mono-3: hsl(@syntax-hue, 87%, 77%);
 
 // Colors -----------------------------------
-@hue-1:   hsl(198, 99%, 37%); // <-cyan
-@hue-2:   hsl(221, 87%, 60%); // <-blue
+@hue-1:   hsl(205, 99%, 37%); // <-blue
+@hue-2:   hsl(285, 87%, 60%); // <-lavender
 @hue-3:   hsl(301, 63%, 40%); // <-purple
-@hue-4:   hsl(119, 34%, 47%); // <-green
+@hue-4:   hsl(140, 80%, 48%); // <-mint
 
-@hue-5:   hsl(  5, 74%, 59%); // <-red 1
-@hue-5-2: hsl(344, 84%, 43%); // <-red 2
+@hue-5:   hsl(307, 74%, 59%); // <-pink
+@hue-5-2: hsl(100, 84%, 43%); // <-green
 
-@hue-6:   hsl(41, 99%, 30%); // <-orange 1
-@hue-6-2: hsl(41, 99%, 38%); // <-orange 2
+@hue-6:   hsl(195, 99%, 47%); // <-sky
+@hue-6-2: hsl(175, 99%, 38%); // <-teal
 
 
 // Base colors -----------------------------------
 @syntax-fg:     @mono-1;
-@syntax-bg:     hsl(@syntax-hue, @syntax-saturation, @syntax-brightness);
+@syntax-bg:     hsl(308, 100%, 89%);
 @syntax-gutter: darken(@syntax-bg, 36%);
 @syntax-guide:  fade(@syntax-fg, 20%);
 @syntax-accent: hsl(@syntax-hue, 100%, 66% );
