--- a/index.less
+++ b/index.less
@@ -4,7 +4,6 @@
 @import "styles/syntax-variables.less";
 
 @import "styles/editor.less";
-@import "styles/hunkview.less";
 
 @import "styles/syntax/_base.less";
 @import "styles/syntax/c.less";
@@ -20,3 +19,5 @@
 @import "styles/syntax/json.less";
 @import "styles/syntax/ruby.less";
 @import "styles/syntax/python.less";
+
+@import "tweaks.less";
