Just imagine some guy with an afro painting a cloud.

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -11,7 +11,7 @@
 @mono-3: hsl(@syntax-hue, 87%, 77%);
 
 // Colors -----------------------------------
-@hue-1:   hsl(205, 99%, 37%); // <-blue
+@hue-1:   hsl(275, 99%, 72%);
 @hue-2:   hsl(285, 87%, 60%); // <-lavender
 @hue-3:   hsl(301, 93%, 66%); // <-purple
 @hue-4:   hsl(140, 80%, 48%); // <-mint
